Lisäys ja pull to refresh

--- a/ShoppingMaui/ShoppingMaui.csproj
+++ b/ShoppingMaui/ShoppingMaui.csproj
@@ -63,4 +63,16 @@
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Compile Update="AddingPage.xaml.cs">
+	    <DependentUpon>AddingPage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="AddingPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
